# binturong

./: .gitattributes  .gitignore  README.md  clean.sh  how_to_use.md  index.html  init.sh  package-lock.json  package.json  vitest.config.ts
.github/workflows/: build-installers.yml  ci-test-matrix.yml  release-candidate-qa.yml
docs/: accessibility-audit.md  bundled-assets.tsv  dependency-license-audit.md  feature-audit.csv  feature-audit.md  performance-bench.csv  performance-validation.md  phase1-validation.md  phase2-validation.md  privacy-security-validation.md  release-acceptance-validation.md  release-candidate-qa.md  test-matrix-validation.md  update-channel-validation.md
docs/superpowers/specs/: 2026-03-28-tool-ui-implementation-design.md
packaging/: README.md
packaging/flatpak/: com.binturong.app.yml
packaging/homebrew/Casks/: binturong.rb
packaging/snap/: snapcraft.yaml
scripts/: dependency_license_audit.sh  privacy_security_check.sh  release_candidate_qa.sh
src/: App.tsx  App.ui.test.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard_detection.rs  db.rs  error_model.rs  lib.rs  lifecycle.rs  main.rs  operation_runtime.rs  tool_registry.rs
src-tauri/src/tools/: analyzers.rs  converters.rs  encoders.rs  formatters.rs  generators.rs  image_tools.rs  mod.rs  text_transforms.rs  unicode_styles.rs
src-tauri/tests/: cli_equivalence.rs
src/components/: PipelineToolSelector.tsx  SettingsModal.tsx
src/hooks/: useClipboardDetection.ts  useCommandPalette.ts  useTabManager.ts  useToolExecution.ts
src/test/: setup.ts
tests/oracle/: cli_runner.py  comparators.py  conftest.py  pytest.ini  requirements.txt  test_data_converters.py  test_edge_cases.py  test_encoding.py  test_formatters.py  test_images.py  test_nondeterministic.py  test_roundtrips.py  test_text_tools.py  test_uncovered_converters.py
(+38 files in other folders)
