[package]
name = "binturong"
version = "0.1.0"
description = "Offline-first desktop developer utility suite"
authors = ["Duc Nguyen"]
homepage = "https://play.alsatian.co/software/binturong.html"
repository = "https://github.com/alsatianco/binturong"
license = "MIT"
edition = "2021"
default-run = "binturong"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "binturong_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
shell-words = "1"
url = "2"
chrono = { version = "0.4", features = ["clock"] }
cron = "0.15"
x509-parser = "0.16"
uuid = { version = "1", features = ["v4"] }
ulid = "1"
qrcode = { version = "0.14", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
resvg = "0.43"
rqrr = "0.8"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
rusqlite = { version = "0.37", features = ["bundled"] }
aes-gcm = "0.10"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
